Show window state operation buttons when the window is maximized

--- a/topbar/resources.qrc
+++ b/topbar/resources.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>resources/logo.svg</file>
+        <file>resources/min.svg</file>
+        <file>resources/close.svg</file>
+        <file>resources/restore.svg</file>
     </qresource>
 </RCC>
