--- a/Shutdown/mainwindow.ui
+++ b/Shutdown/mainwindow.ui
@@ -72,7 +72,7 @@
         <string>Shut Down</string>
        </property>
        <property name="default">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
